Commit 4 - Cap nhat View cua Home Index

--- a/ConstructionMS/Views/Home/Index.cshtml
+++ b/ConstructionMS/Views/Home/Index.cshtml
@@ -30,7 +30,10 @@
     </div>
 
     <div>
-        @Html.ActionLink("List of students", "Index", "Students")<br />
-        @Html.ActionLink("List of enrollments", "Index", "Enrollments")
+        @Html.ActionLink("List of Product", "Index", "Products")<br />
+        @Html.ActionLink("List of Order", "Index", "Orders")<br />
+        @Html.ActionLink("List of Staff", "Index", "Staff")<br />
+        @Html.ActionLink("List of Receipts", "Index", "Receipts")<br />
+        @Html.ActionLink("List of Report", "Index", "Reports")<br />
     </div>
 </div>
