--- a/ConstructionMS/Views/Home/Index.cshtml
+++ b/ConstructionMS/Views/Home/Index.cshtml
@@ -29,6 +29,8 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 
+    Test push 
+
     <div>
         @Html.ActionLink("List of Product", "Index", "Products")<br />
         @Html.ActionLink("List of Order", "Index", "Orders")<br />
