--- a/ConstructionMS/Views/Home/Index.cshtml
+++ b/ConstructionMS/Views/Home/Index.cshtml
@@ -154,11 +154,11 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         @*<h6 class="collapse-header"></h6>*@
                         @*<a class="collapse-item" href="login.html">Quản lí danh mục sản phẩm</a>*@
-                       
-                        @Html.ActionLink("Quản lí danh mục sản phẩm", "Index", "Categories")<br />
-                      
-                        @Html.ActionLink("Quản lí sản phẩm", "Index", "Products")<br />
-                       
+
+                        @Html.ActionLink("Danh mục sản phẩm", "Index", "Categories")<br />
+                        @Html.ActionLink("Loại danh mục sản phẩm", "Index", "CategoryTypes")<br />
+                        @Html.ActionLink("Sản phẩm", "Index", "Products")<br />
+
                     </div>
                 </div>
             </li>
