--- a/ConstructionMS/Views/CategoryTypes/Create.cshtml
+++ b/ConstructionMS/Views/CategoryTypes/Create.cshtml
@@ -1,8 +1,17 @@
-﻿@model ConstructionMS.Product
+﻿@model ConstructionMS.CategoryType
 
 @{
     ViewBag.Title = "Create";
 }
+
+<h2>Create</h2>
+
+
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -395,7 +404,7 @@
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h4 class="m-0 font-weight-bold text-primary">Chỉnh sửa sản phẩm </h4>
+                            <h4 class="m-0 font-weight-bold text-primary">Thêm mới danh mục sản phẩm </h4>
                         </div>
 
 
@@ -406,155 +415,88 @@
                                         <tr>
 
                                             @*<th>
-                @Html.DisplayNameFor(model => model.Height)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Material)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantity)
-            </th>*@
+                                                    @Html.DisplayNameFor(model => model.Height)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.Material)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.Quantity)
+                                                </th>*@
 
                                         </tr>
+
 
                                         @using (Html.BeginForm())
                                         {
                                             @Html.AntiForgeryToken()
 
                                         <div class="form-horizontal">
-                                            <h4>Thông tin chi tiết</h4>
-                                            <a href="~/Products/Index" class="btn btn-secondary btn-icon-split">
-                                                <span class="icon text-white-50">
-                                                    <i class="fas fa-arrow-left"></i>
+                                            <h4>Category</h4>
+
+
+
+                                            <div class="form-group">
+                                                <span>
+                                                    <div class="col-md-offset-2 col-md-10">
+                                                        <input type="submit" value="Create" class="btn btn-default" />
+                                                    </div>
                                                 </span>
-                                                <span class="text">Quay lại </span>
-                                            </a>
+                                                <span>
+                                                    <div>
+                                                        @Html.ActionLink("Back to List", "Index")
+                                                    </div>
+                                                </span>
+
+
+
+                                            </div>
+
                                             <hr />
                                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                            @Html.HiddenFor(model => model.ProductID)
+                                            @using (Html.BeginForm())
+                                            {
+                                                @Html.AntiForgeryToken()
 
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.ProductName, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.EditorFor(model => model.ProductName, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.ProductName, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
+                                                <div class="form-horizontal">
+                                                    <h4>CategoryType</h4>
+                                                    <hr />
+                                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                                    <div class="form-group">
+                                                        @Html.LabelFor(model => model.TypeName, htmlAttributes: new { @class = "control-label col-md-2" })
+                                                        <div class="col-md-10">
+                                                            @Html.EditorFor(model => model.TypeName, new { htmlAttributes = new { @class = "form-control" } })
+                                                            @Html.ValidationMessageFor(model => model.TypeName, "", new { @class = "text-danger" })
+                                                        </div>
+                                                    </div>
 
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.Brand, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.EditorFor(model => model.Brand, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Brand, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
+                                                    <div class="form-group">
+                                                        @Html.LabelFor(model => model.CategoryID, "CategoryID", htmlAttributes: new { @class = "control-label col-md-2" })
+                                                        <div class="col-md-10">
+                                                            @Html.DropDownList("CategoryID", null, htmlAttributes: new { @class = "form-control" })
+                                                            @Html.ValidationMessageFor(model => model.CategoryID, "", new { @class = "text-danger" })
+                                                        </div>
+                                                    </div>
 
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.Size, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.EditorFor(model => model.Size, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Size, "", new { @class = "text-danger" })
+                                                    <div class="form-group">
+                                                        <div class="col-md-offset-2 col-md-10">
+                                                            <input type="submit" value="Create" class="btn btn-default" />
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            }
 
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
 
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.ProductCode, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.EditorFor(model => model.ProductCode, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.ProductCode, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.ProductImage, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.EditorFor(model => model.ProductImage, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.ProductImage, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.EditorFor(model => model.Status, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.Height, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.EditorFor(model => model.Height, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Height, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.CategoryTypeID, "CategoryTypeID", htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.DropDownList("CategoryTypeID", null, htmlAttributes: new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(model => model.CategoryTypeID, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.ManagerID, "ManagerID", htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.DropDownList("ManagerID", null, htmlAttributes: new { @class = "form-control" })
-                                                    @Html.ValidationMessageFor(model => model.ManagerID, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.Material, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    @Html.EditorFor(model => model.Material, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Material, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group">
-                                                <div class="col-md-offset-2 col-md-10">
-                                                    <input type="submit" value="Save" class="btn btn-default" />
-                                                </div>
-                                            </div>
                                         </div>
                                         }
 
-                                        @*<div>
-                                            @Html.ActionLink("Back to List", "Index")
-                                        </div>*@
 
 
                                         @*<div class="form-group">
-            <div class="fas fa-check" style="float:right;">
-                <input type="submit" value="Hoàn tất" class="btn btn-success " />
-            </div>
-        </div>*@
+                                                <div class="fas fa-check" style="float:right;">
+                                                    <input type="submit" value="Hoàn tất" class="btn btn-success " />
+                                                </div>
+                                            </div>*@
 
 
                                     </thead>
@@ -662,8 +604,3 @@
 </body>
 
 </html>
-
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
