Update Upload Img Product

--- a/ConstructionMS/Views/Products/Index.cshtml
+++ b/ConstructionMS/Views/Products/Index.cshtml
@@ -434,9 +434,9 @@
                                                 @Html.DisplayNameFor(model => model.ProductName)
                                             </th>
 
-                                            <th>
+                                            @*<th>
                                                 @Html.DisplayNameFor(model => model.CategoryType)
-                                            </th>
+                                            </th>*@
                                             <th>
                                                 @Html.DisplayNameFor(model => model.ProductCode)
                                             </th>
@@ -468,8 +468,16 @@
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.ProductID)
                                                 </td>
+                                                
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.ProductImage)
+                                                    @*@Html.DisplayFor(modelItem => item.ImageUpload)*@
+                                                    @*@{
+            var base64 = Convert.ToBase64String(item.ImageUpload);
+            var imgsrc = string.Format("data:image/gif;base64,{0}", base64);
+        }*@
+                                                    @*<img runat="server" src="@String.Format("data:image/jpg;base64,{0}", item.ImageUpload)" />*@
+                                                    <img src="data:image;base64,@System.Convert.ToBase64String(item.ImageUpload)" alt="" />
+                                                    @*<img src='@imgsrc' style="max-width:100px;max-height:100px" />*@
                                                 </td>
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.ProductName)
