--- a/ConstructionMS/Views/Products/Create.cshtml
+++ b/ConstructionMS/Views/Products/Create.cshtml
@@ -406,14 +406,14 @@
                                         <tr>
 
                                             @*<th>
-                @Html.DisplayNameFor(model => model.Height)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Material)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantity)
-            </th>*@
+                    @Html.DisplayNameFor(model => model.Height)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Material)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Quantity)
+                </th>*@
 
                                         </tr>
 
@@ -421,105 +421,112 @@
                                         {
                                             @Html.AntiForgeryToken()
 
-                                        <div class="form-horizontal">
-                                            <h6>Thông tin chính</h6>
+                                            <div class="form-horizontal">
+                                                <h6>Thông tin chính</h6>
 
-                                            @*<div class="form-group">
-            <div class="fas fa-check" style="float:right;">
-                <input type="submit" value="Hoàn tất" class="btn btn-success " />
-            </div>
-        </div>*@
+                                                @*<div class="form-group">
+                        <div class="fas fa-check" style="float:right;">
+                            <input type="submit" value="Hoàn tất" class="btn btn-success " />
+                        </div>
+                    </div>*@
 
-                                            <a href="#" class="btn btn-success btn-icon-split" style="float:right;">
-                                                <span class="icon text-white-50">
-                                                    <i class="fas fa-check"></i>
-                                                </span>
-                                                <input type="submit" value="Hoàn tất" class="btn btn-success " />
-                                            </a>
+                                                <a href="#" class="btn btn-success btn-icon-split" style="float:right;">
+                                                    <span class="icon text-white-50">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
+                                                    <input type="submit" value="Hoàn tất" class="btn btn-success " />
+                                                </a>
 
-                                               <a href="~/Products/Index" class="btn btn-secondary btn-icon-split">
-                                                <span class="icon text-white-50">
-                                                    <i class="fas fa-arrow-left"></i>
-                                                </span>
-                                                <span class="text">Quay lại</span>
-                                            </a>
+                                                <a href="~/Products/Index" class="btn btn-secondary btn-icon-split">
+                                                    <span class="icon text-white-50">
+                                                        <i class="fas fa-arrow-left"></i>
+                                                    </span>
+                                                    <span class="text">Quay lại</span>
+                                                </a>
 
 
-                                            <hr />
-                                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.ProductName, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-5">
-                                                    @Html.EditorFor(model => model.ProductName, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.ProductName, "", new { @class = "text-danger" })
+                                                <hr />
+                                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                                <div class="form-group">
+                                                    @Html.LabelFor(model => model.ProductName, htmlAttributes: new { @class = "control-label col-md-2" })
+                                                    <div class="col-md-5">
+                                                        @Html.EditorFor(model => model.ProductName, new { htmlAttributes = new { @class = "form-control" } })
+                                                        @Html.ValidationMessageFor(model => model.ProductName, "", new { @class = "text-danger" })
+                                                    </div>
                                                 </div>
-                                            </div>
 
-                                            <div class="form-group">
-
+                                                <div class="form-group">
 
 
-                                                @Html.LabelFor(model => model.Brand, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-5">
-                                                    @Html.EditorFor(model => model.Brand, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Brand, "", new { @class = "text-danger" })
+
+                                                    @Html.LabelFor(model => model.Brand, htmlAttributes: new { @class = "control-label col-md-2" })
+                                                    <div class="col-md-5">
+                                                        @Html.EditorFor(model => model.Brand, new { htmlAttributes = new { @class = "form-control" } })
+                                                        @Html.ValidationMessageFor(model => model.Brand, "", new { @class = "text-danger" })
+                                                    </div>
                                                 </div>
-                                            </div>
 
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.Size, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-5">
-                                                    @Html.EditorFor(model => model.Size, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Size, "", new { @class = "text-danger" })
+                                                <div class="form-group">
+                                                    @Html.LabelFor(model => model.Size, htmlAttributes: new { @class = "control-label col-md-2" })
+                                                    <div class="col-md-5">
+                                                        @Html.EditorFor(model => model.Size, new { htmlAttributes = new { @class = "form-control" } })
+                                                        @Html.ValidationMessageFor(model => model.Size, "", new { @class = "text-danger" })
+                                                    </div>
                                                 </div>
-                                            </div>
 
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-5">
-                                                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                                                <div class="form-group">
+                                                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                                                    <div class="col-md-5">
+                                                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                                                        @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                                                    </div>
                                                 </div>
-                                            </div>
 
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-5">
-                                                    @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+                                                <div class="form-group">
+                                                    @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+                                                    <div class="col-md-5">
+                                                        @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                                                        @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+                                                    </div>
                                                 </div>
-                                            </div>
 
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.ProductCode, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-5">
-                                                    @Html.EditorFor(model => model.ProductCode, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.ProductCode, "", new { @class = "text-danger" })
+                                                <div class="form-group">
+                                                    @Html.LabelFor(model => model.ProductCode, htmlAttributes: new { @class = "control-label col-md-2" })
+                                                    <div class="col-md-5">
+                                                        @Html.EditorFor(model => model.ProductCode, new { htmlAttributes = new { @class = "form-control" } })
+                                                        @Html.ValidationMessageFor(model => model.ProductCode, "", new { @class = "text-danger" })
+                                                    </div>
                                                 </div>
-                                            </div>
 
-                                            @*<div class="form-group">
-            @Html.LabelFor(model => model.ProductImage, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
-                @Html.EditorFor(model => model.ProductImage, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ProductImage, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+                                                @*<div class="form-group">
+                        @Html.LabelFor(model => model.ProductImage, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-5">
+                            @Html.EditorFor(model => model.ProductImage, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.ProductImage, "", new { @class = "text-danger" })
+                        </div>
+                    </div>*@
 
-                                            @*Add Test upload image*@
+                                                @*Add Test upload image*@
 
-                                            @Html.LabelFor(model => model.ProductImage, new { @class = "control-label col-md-2" })
-                                            <div class="col-md-10">
-                                                <input name="Image" type="file" />
-                                                @Html.ValidationMessageFor(model => model.ProductImage)
-                                            </div>
+                                                @Html.LabelFor(model => model.ProductImage, new { @class = "control-label col-md-2" })
+                                                @*<div class="col-md-10">
+                        <input name="Image" type="file" />
+                        @Html.ValidationMessageFor(model => model.ProductImage)
+                    </div>*@
 
-                                            <div class="form-group">
-                                                @Html.LabelFor(model => model.ImageUpload, htmlAttributes: new { @class = "control-label col-md-2" })
-                                                <div class="col-md-10">
-                                                    <input type="file" class="form-control" name="file" accept="image/png,image/jpg,image/jpeg" />
-                                                    @Html.ValidationMessageFor(model => model.ImageUpload, "", new { @class = "text-danger" })
-                                                </div>
+                                                <div class="form-group">
+                                                    @Html.LabelFor(model => model.ImageUpload, htmlAttributes: new { @class = "control-label col-md-2" })
+                                                    <div class="col-md-10">
+                                                        <input type="file" class="form-control" name="file" />
+
+                                                        @*@{
+                                                            var base64 = Convert.ToBase64String(model => model.ImageUpload);
+                                                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                                                        }*@
+                                                        
+
+                                                        @Html.ValidationMessageFor(model => model.ImageUpload, "", new { @class = "text-danger" })
+                                                    </div>
                                             </div>
 
                                         
