--- a/ConstructionMS/Views/Products/Index.cshtml
+++ b/ConstructionMS/Views/Products/Index.cshtml
@@ -221,6 +221,13 @@
                         </div>
                     </form>
 
+                    <form asp-controller="Products" asp-action="Index1">
+                        <p>
+                            Title: <input type="text" name="SearchString">
+                            <input type="submit" value="Filter" />
+                        </p>
+                    </form>
+
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
 
@@ -435,8 +442,8 @@
                                             </th>
 
                                             @*<th>
-                                                @Html.DisplayNameFor(model => model.CategoryType)
-                                            </th>*@
+            @Html.DisplayNameFor(model => model.CategoryType)
+        </th>*@
                                             <th>
                                                 @Html.DisplayNameFor(model => model.ProductCode)
                                             </th>
@@ -446,82 +453,84 @@
                                             <th>
                                                 @Html.DisplayNameFor(model => model.Status)
                                             </th>
+                                       
+                                           
                                             <th>
                                                 <center> Tùy chọn</center>
-                                               
+
                                             </th>
                                             @*<th>
-                                @Html.DisplayNameFor(model => model.Height)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Material)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Quantity)
-                            </th>*@
+            @Html.DisplayNameFor(model => model.Height)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Material)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Quantity)
+        </th>*@
 
                                         </tr>
 
                                         @foreach (var item in Model)
                                         {
-                                            <tr>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.ProductID)
-                                                </td>
-                                                
-                                                <td>
-                                                    @*@Html.DisplayFor(modelItem => item.ImageUpload)*@
-                                                    @*@{
-            var base64 = Convert.ToBase64String(item.ImageUpload);
-            var imgsrc = string.Format("data:image/gif;base64,{0}", base64);
-        }*@
-                                                    @*<img runat="server" src="@String.Format("data:image/jpg;base64,{0}", item.ImageUpload)" />*@
-                                                    <img src="data:image;base64,@System.Convert.ToBase64String(item.ImageUpload)" alt="" />
-                                                    @*<img src='@imgsrc' style="max-width:100px;max-height:100px" />*@
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.ProductName)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.CategoryType)
-                                                </td>
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.ProductID)
+                                            </td>
 
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.ProductCode)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Price)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Status)
-                                                </td>
+                                            <td>
+                                                @*@Html.DisplayFor(modelItem => item.ImageUpload)*@
+                                                @*@{
+                var base64 = Convert.ToBase64String(item.ImageUpload);
+                var imgsrc = string.Format("data:image/gif;base64,{0}", base64);
+            }*@
+                                
+                                                <img src="data:image;base64,@System.Convert.ToBase64String(item.ImageUpload)" alt="" width="150" height="125" />
+                                              
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.ProductName)
+                                            </td>
+                                            @*<td>
+                                                @Html.DisplayFor(modelItem => item.CategoryType)
+                                            </td>*@
 
-                                                @*<td>
-                                    @Html.DisplayFor(modelItem => item.Material)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Quantity)
-                                </td>*@
-                                                <td>
-                                                    @*button Edit*@
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.ProductCode)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Price)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Status)
+                                            </td>
+                                           
+                                            @*<td>
+            @Html.DisplayFor(modelItem => item.Material)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Quantity)
+        </td>*@
+                                            <td>
+                                                @*button Edit*@
 
-                                                    @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.ProductID }, new { @class = "btn btn-primary" }) |
+                                                @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.ProductID }, new { @class = "btn btn-primary" }) |
 
-                                                    @*button Details*@
+                                                @*button Details*@
 
-                                                    @Html.ActionLink("Chi tiết", "Details", new { id = item.ProductID }, new { @class = "btn btn-info" }) |
+                                                @Html.ActionLink("Chi tiết", "Details", new { id = item.ProductID }, new { @class = "btn btn-info" }) |
 
-                                                    @*button Delete*@
-                                                    @Html.ActionLink("Xóa", "Delete", new { id = item.ProductID }, new { @class = "btn btn-danger" })
+                                                @*button Delete*@
+                                                @Html.ActionLink("Xóa", "Delete", new { id = item.ProductID }, new { @class = "btn btn-danger" })
 
-                                                    @*@Html.ActionLink("Edit", "Edit", new { id = item.ProductID }) |*@
-                                                    @*<button onclick="@Url.Action("Edit", "Edit", new {id = item.ProductID })">Edit</button>*@
-                                                    @*@Html.ActionLink("Details", "Details", new { id = item.ProductID }) |*@
+                                                @*@Html.ActionLink("Edit", "Edit", new { id = item.ProductID }) |*@
+                                                @*<button onclick="@Url.Action("Edit", "Edit", new {id = item.ProductID })">Edit</button>*@
+                                                @*@Html.ActionLink("Details", "Details", new { id = item.ProductID }) |*@
 
 
 
-                                                </td>
-                                            </tr>
+                                            </td>
+                                        </tr>
                                         }
                                     </thead>
                                     @*<tfoot>
