[Changelog] Cập nhật validation cơ bản cho Product/Cat/CatType.

--- a/ConstructionMS/Views/Products/Index.cshtml
+++ b/ConstructionMS/Views/Products/Index.cshtml
@@ -211,20 +211,27 @@
 
                     <!-- Topbar Search -->
                     <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Tìm kiếm..." aria-label="Search" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
-                        </div>
+                        @*<div class="input-group">
+            <input type="text" class="form-control bg-light border-0 small" placeholder="Tìm kiếm..." aria-label="Search" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+                <button class="btn btn-primary" type="button">
+                    <i class="fas fa-search fa-sm"></i>
+                </button>
+            </div>
+        </div>*@
+                        <b> Lọc tìm kiếm: </b>
+                        @Html.RadioButton("option", "ProductName") <text>Sản phẩm</text>
+                        @Html.RadioButton("option", "Brand")<text>Hiệu</text>
+                        @Html.RadioButton("option", "Material")<text>Vật liệu</text>
+                        @Html.TextBox("search")
+                        <input type="submit" name="submit" value="Tìm kiếm" />
+
                     </form>
 
-                    <p>
-                        Find by name: @Html.TextBox("SearchString")
-                        <input type="submit" value="Search" />
-                    </p>
+                    @*<p>
+            Find by name: @Html.TextBox("SearchString")
+            <input type="submit" value="Search" />
+        </p>*@
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
